<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Kejun Xia
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Fragment B"
        android:background="#aaa"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:id="@+id/screen_detail_counter">

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="50sp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/screen_detail_counterDisplay"
            android:text="-"
            android:id="@+id/screen_detail_buttonDecrement"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:textSize="50sp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="0"
            android:id="@+id/screen_detail_counterDisplay"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="50sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/screen_detail_counterDisplay"
            android:text="+"
            android:id="@+id/screen_detail_buttonIncrement"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:text="Hold buttons to update count continuously."
        android:layout_below="@+id/screen_detail_counter"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:text="Start service to increment every second for 10 times. Note count value in all fragments and notification view will be updated in sync"
        android:layout_above="@+id/screen_detail_buttonAutoIncrement"
        android:id="@+id/screen_detail_autoCountDescription"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Auto Increment 10 times"
        android:layout_alignParentBottom="true"
        android:id="@+id/screen_detail_buttonAutoIncrement"/>

</RelativeLayout>