<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Kejun Xia
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">AndMvp-Simple</string>
    <string name="title_master_screen">Master Screen</string>
    <string name="title_detail_screen">Detail Screen</string>
    <string name="network_error_to_get_ip">Network error to get IP address</string>
</resources>